Fix CSS issues on safari

--- a/assets/styles/layout.sass
+++ b/assets/styles/layout.sass
@@ -15,12 +15,15 @@ $left-width: 250px
   flex:         $grow $shrink $size
 
 html, body
-  height: 100%
+  min-height: 100vh
+
+body > div
+  min-height: 100vh
 
 .application
   position: relative
   width: 100%
-  min-height: 100%
+  min-height: 100vh
   margin-top: 40px
   @include display-flex
 
